# rust-exercises

./: Cargo.toml  README.md
blockchain/: Cargo.toml  README.md
blockchain/src/: blockchain.rs  main.rs
chat/: README.md
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs
port_sniffer/: Cargo.toml  README.md
port_sniffer/src/: cli.yaml  main.rs
snake/: Cargo.toml  README.md
snake/src/: game.rs  main.rs  snake.rs
web_api/: Cargo.toml
web_api/src/: README.md  database.rs  handlers.rs  main.rs  models.rs
