[package]
name = "web_api"
version = "0.1.0"
authors = ["kangxiaoning <kxnmei@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
router = "0.6"
logger = "0.4"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.5", features = ["serde", "v4"] }